--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.2",
     "@stripe/stripe-js": "^1.46.0",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
