--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "stripe": "^11.6.0"
+    "stripe": "^11.6.0",
+    "use-local-storage-state": "^18.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
