--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "@stripe/stripe-js": "^1.46.0",
+    "micro": "^10.0.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
